--- a/staff/jorge-rodri/mucho-layout/stymob.css
+++ b/staff/jorge-rodri/mucho-layout/stymob.css
@@ -3,13 +3,15 @@ body{margin: 0;}
 
 .cabecera{
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 .cabecera--borde{
     border-bottom: 1px solid #AEAEAE;
 }
 .cabecera__logo{
-    width: 4rem;
+    height: 5rem;
+    width: 100px;
 }
 .cabecera--margin-top{
     margin-top: 0.3rem;
@@ -82,6 +84,7 @@ body{margin: 0;}
 @media(min-width: 768px) and (max-width: 1024px){
     .cabecera{
         display: flex;
+        justify-content: space-between;
     }
     .cabecera--menu{
         display: flex;
@@ -96,6 +99,7 @@ body{margin: 0;}
     .cabecera--lista{
         display: flex;
         flex-direction: column;
+        justify-content: flex-start;
         align-items: flex-end;
     }
     .cabecera__desplegable--link{
@@ -106,7 +110,7 @@ body{margin: 0;}
     }
     .cabecera__desplegable{
         list-style-type: none;
-        margin: 0.2rem;
+        margin: .2em;
     }
     .cabecera--horizontal{
         display: flex;
@@ -119,6 +123,10 @@ body{margin: 0;}
     .info__fotos{
         width: 37vh;
         height: 35vh;
+    }
+    .info__display{
+        display: flex;
+        flex-wrap: wrap;
     }
     .info{
         width: 35vh;
@@ -191,7 +199,7 @@ body{margin: 0;}
         display:flex;
         justify-content: space-between;
     }
-    .info__grid{
+    .info__display{
         display: grid;
         grid-template-columns: 50% 50%; 
     }
