--- a/staff/sylvain-legrill/mucho-layout/all/style.css
+++ b/staff/sylvain-legrill/mucho-layout/all/style.css
@@ -1,7 +1,3 @@
-
-
-/* =====>>>>GENERAL */
-
 html{
     box-sizing: border-box;
 
@@ -11,53 +7,47 @@ body{
     display: flex;
     flex-flow: column wrap;
     background-color: rgb(255,255,255);
+    color:#555555;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
     line-height: 1.5;
+    font-size: 20px;
 }
 
-/* =====>>>>HEADER */
+
 
 header{
-    /* display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start; */
     background-color: rgb(255,255,255); 
     padding: 14px 16px;  
     color: #AEAEAE;
-    font-size: 20px;
     
-
 }
 
-#logo-img{
+.header__nav{
+    display: flex;
+    justify-content:space-between;  
+    align-items: flex-start;
+ }
+
+.header__logoimg{
     width: 85px;
 }
 
-.navigator {
+.header__presentation{
+    display: none;
+}
+
+.header__navigator{
     display: none;
   }
-
-
-
-
-.nav{
-    display: flex;
-    justify-content:space-between;  
-    align-items: center;
- }
     
-.navproject{
-    
-    font-size: 20px ;
+.header__navproject{
     line-height: 1.3;
     padding: 10px 0 0;
-    height: 100%;
-    
-    
+    height: 100%;     
 }
-.navservices , .navindustries{
+
+.header__navproject--navservices , .header__navproject--navindustries{
     display: flex;
     justify-content:space-between;  
     align-items: center;
@@ -65,177 +55,481 @@ header{
 }
 
 
-  
-/* =====>>>>MAIN */
-
- 
-
-  main{
+main{
     display: flex;
-    flex-flow: column wrap;
-    justify-content: flex-start;
+    flex-direction: column;
+    justify-content: space-between;
 
 }
 
-
-.image-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex-direction: row;
-    width:100%;
-
-  }
-.image-container img{
-    align-content: stretch;
+ .main__imagecontainer img{
     width: 100%;
-    height: 100%;
     padding-top: 3px;
 
-}
+} 
 
-img:hover{
+.main__imagecontainer img:hover{
     opacity: 0.05;
     transition: opacity 500ms;
 }
 
 
- #presentation{
-     display: none;
- }
-
- 
-  
-  .mainarticles{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-
-  
-}
-
-.we-are-mucho, .talking-and-teaching, .about{
+.main__mainarticles--wearemucho, .main__mainarticles--talkingandteaching, .main__mainarticles--about{
     margin-bottom: 1%;
     background-color: #F4F4F4;
     padding: 24px;
 
 }
 
-.mainarticles p{
-    font-size: 20px;
-}
-
-
-
- h2{
+.main__mainarticles h2{
     color: #EC1C24;
     font-size: 14px;
 }
 
-.we-are-mucho a{
+.main__mainarticles a {
     color: #AEAEAE;
     text-decoration: none;
 }
 
-.contact{
-   
-    padding-top:100px;
-    color:#555555;
-    font-size: 20px;
-}
- 
-/* =====>>>>FOOTER */
-footer{
-    display: grid;
-    grid-template-columns: 87% 13%;
-    color: #AEAEAE;
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     font-size: 14px;
-
-   
-    margin-top: 10%;
-    color:#8a8888;
+    margin-top: 10%; 
     margin: 3% 3%;
 
 }
 
+.footer__contact{
+    
+    font-size: 20px;
+}
+ 
 
-
-.footer-adresses{
+.footer__adresses{
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
 
 }
-.cities div{
-    padding: 100px;
+
+.footer h2{
+    color: #EC1C24;
+    font-size: 14px;
 }
 
-
-
-
-.footer-adresses{
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+.footer__copyrightsuscribe{
+    color:#AEAEAE;
 
 }
-.cities div{
-    padding: 100px;
-}
-  
+
 /* +++++++++++++ MEDIA QUERIES */
 
 
-@media (min-width: 562px) {
+@media(min-width: 700px) and (max-width: 1124px){
 
-/* Header */
+    html{
+        box-sizing: border-box;
+    
+    }
+    
+    body{
+        
+        margin: 0;
+        border: 0;
+        padding: 0;
+        width: 100%;
+    }
+    
+    .header{
 
-
-
-
-/* Main */
-
-
-
-
-/* Footer */
-
-
-
-
-
-
-}
-
-
-@media (min-width: 562px) {
-
-    /* Header */
+        font-size: 14px; 
+    
+        
+    }
+    
+   
+    .header__bars{
+        display: none;
+    }
+    
+    
+    .header__navigator--menulist{
+        
+        display: flex;
+    }
+    
+    .header__navigator--menulist li {
+    
+    font-size: 14px;
+    padding: 2%;
+    list-style-type: none;  }
+    
+        
+    .header__navproject{
+    
+        display: flex;
+        justify-content: flex-end;
+        margin-left: 1em;
+        
+        
+    }
+    .header__navproject--navservices , .header__navproject--navindustries{
+        display: flex;
+        align-items: center;
+        margin: 2%;
+        font-size: 14px;
+    
+    }
+    
+    .header__navproject i{
+        margin-left: 10px;
+    
+    }
+    
+    .main{
+        margin-left: 1%;
+        margin-right: 1%;
+            
+    }
+    
+    .main__imagecontainer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        flex-direction: row;
+        
+      }
+    .main__imagecontainer img{
+        align-content: stretch;
+        width: 49.8%;
+        height: 49.8%;
+    
+    }
+    
+    .main__imagecontainer img:hover{
+        opacity: 0.05;
+        transition: opacity 500ms;
+    }
+     
+      
+    .main__mainarticles{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 50% 50%;
+        grid-gap: 3px;
+        grid-auto-flow: row
+      
+    }
+    
+    .main__mainarticles--wearemucho, .main__mainarticles--talkingandteaching, .main__mainarticles--about{
+        
+        background-color: #F4F4F4;
+        padding: 10px;
+    
+    }
     
     
     
+    .main__mainarticles h2{
+     
+        padding: 10px;
+    }
     
-    /* Main */
+       
+    
+    .footer{
+       
+        color: #AEAEAE;
+        margin-top: 10%;
+        color:#8a8888;
+        margin: 3% 3%
+    
+    }
+    
+    .footer__contact{
+    
+        justify-items: start;
+        grid-column-start: 1 / span 2;
+        font-size: 26px;
+        padding-top:100px;
+        color:#555555;
+    }
     
     
+    .footer__addresses{
+        display: grid;
+        grid-template-columns: 48% 48%;
+        grid-template-rows: 48% 48%;
+        grid-auto-flow: row;
+    
+    }
     
     
-    /* Footer */
-    
-    
-    
-    
+    .footer__copyrightsuscribe{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: flex-end;
+        color:#AEAEAE;
+        font-size: 14px;
     
     
     }
+    
+    .footer__copyrightsuscribe--subscribe, .footer__copyrightsuscribe--copyright{
+        
+        align-content: space-between;
+    }
+    
+    .footer__copyrightsuscribe--subscribe{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        word-spacing: 2px;
+    
+    }
+    
+    .footer__copyrightsuscribe--subscribe i {
+        margin: 10px;
+        font-size: 17px;
+    }
+    
 
+}
+@media (min-width: 1124px){  
 
-
-
-
-
-
-
-
-
-
- 
+    html{
+        box-sizing: border-box;
+    
+    }
+    
+    body{
+        margin: 0;
+        border: 0;
+        padding: 0;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: flex-start;
+        background-color: rgb(255,255,255);
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: normal;
+        line-height: 1.5;
+        width: 100%;
+    }
+    
+    .header{
+       
+        background-color: rgb(255,255,255); 
+        padding: 14px 16px;   
+        color: #AEAEAE;
+        font-size: 20px;
+        
+    }
+    
+    .header__logoimg{
+        width: 100px;
+    }
+    
+    .header__bars{
+        display: none;
+    }
+    
+    .header__presentation{
+        display: block;
+        width:40%;
+    }
+    
+    
+    .header__nav{
+        display: flex;
+        justify-content:space-between; 
+        align-content: flex-start;
+     }
+    
+    .header__navigator--menulist{
+        
+        display: flex;
+    }
+    
+    .header__navigator--menulist  li {
+    
+    
+    padding: 2%;
+    list-style-type: none;  }
+    
+        
+    .header__navproject{
+    
+        display: none;
+        justify-content: flex-end;
+        margin-left: 1em;
+        
+        
+    }
+    .header__navproject--navservices , .header__navproject--navindustries{
+        display: flex;
+        align-items: center;
+        margin: 2%;
+        font-size: 14px;
+    
+    }
+    
+    .header__navproject i{
+        margin-left: 10px;
+    
+    }
+    
+    
+    
+    
+    
+    .main{
+       margin-left: 1%;
+       margin-right: 1%;
+        
+    }
+    
+     .main__imagecontainer {
+        display: grid;
+        grid-template-columns: repeat( 3 , 1fr);
+        grid-template-rows: repeat(11, 1fr);
+        grid-gap: 3px;
+        grid-auto-flow: dense;
+        justify-items: stretch;
+        align-items: stretch;
+        position: relative;
+        height: 100%;
+      } 
+    
+    .main__imagecontainer img{
+        margin: auto;
+        max-width: 100%;
+        max-height: 100%;
+    
+    } 
+    
+    .main__imagecontainer img:hover{
+        opacity: 0.05;
+        transition: opacity 500ms;
+    }
+    
+    .main__imagecontainer--imgD , .main__imagecontainer--imgG , .main__imagecontainer--imgJ , .main__imagecontainer--imgM, .main__imagecontainer--imgP{
+        grid-column-start: span 2;
+        grid-row-start: span 2;
+    }
+    
+    
+    
+    
+    
+    
+     
+      
+    .main__mainarticles{
+        display: grid;
+        grid-template-columns: repeat( 3 , 1fr);
+        grid-gap: 3px;
+        grid-auto-flow: dense;
+      
+    }
+    
+    
+    
+    .main__mainarticles--wearemucho, .main__mainarticles--talkingandteaching, .main__mainarticles--about{
+        
+        background-color: #F4F4F4;
+        padding: 10px;
+    
+    }
+    
+    
+    
+    .main__mainarticles p{
+        font-size: 20px;
+        padding: 10px;
+    }
+    
+    
+    
+    .main__mainarticles h2{
+        color: #EC1C24;
+        font-size: 20px;
+        padding: 10px;
+    }
+    
+    .main__mainarticles a{
+        color: #AEAEAE;
+        text-decoration: none;
+    }
+    
+    
+    .footer{
+        margin-left: 1%;
+        margin-right: 1%;
+        color:#8a8888;
+    
+    
+    }
+    
+    .footer__contact{
+       
+        display: grid;
+        grid-template-columns: repeat(2 , 1fr);
+        font-size: 22px;
+        padding-top:100px;
+        color:#555555;
+        font-size: 20px;
+    }
+    
+    .footer__addresses{
+        display: grid;
+        grid-template-columns: repeat(4 , 1fr);
+    
+    
+    }
+    
+    
+    .footer__addresses .direction{
+        font-size: 14px;
+    }
+    
+    
+    
+    .footer__copyrightsuscribe{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: flex-end;
+        color:#AEAEAE;
+        font-size: 14px;
+        
+    }
+    
+    
+    
+    
+    
+    .footer__copyrightsuscribe--subscribe{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        word-spacing: 2px;
+    
+    }
+    
+    .footer__copyrightsuscribe--subscribe i {
+        margin: 10px;
+        font-size: 17px;
+    }
+    
+    .footer h2{
+        color: #EC1C24;
+        font-size: 14px;
+    
+    }
+    
+    
+}
