--- a/staff/sylvain-legrill/mucho-layout/mobile/style.css
+++ b/staff/sylvain-legrill/mucho-layout/mobile/style.css
@@ -1,63 +1,56 @@
 
-
-/* =====>>>>GENERAL */
-
 html{
     box-sizing: border-box;
 
 }
 
 body{
+    
     display: flex;
     flex-flow: column wrap;
     background-color: rgb(255,255,255);
+    color:#555555;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
     line-height: 1.5;
+    font-size: 20px;
+    
 }
 
-/* =====>>>>HEADER */
+
 
 header{
-    /* display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start; */
     background-color: rgb(255,255,255); 
     padding: 14px 16px;  
     color: #AEAEAE;
-    font-size: 20px;
     
-
 }
 
-#logo-img{
-    width: 85px;
-}
-
-.navigator {
-    display: none;
-  }
-
-
-
-
-.nav{
+.header__nav{
     display: flex;
     justify-content:space-between;  
     align-items: center;
  }
+
+.header__logoimg{
+    width: 85px;
+}
+
+.header__presentation{
+    display: none;
+}
+
+.header__navigator{
+    display: none;
+  }
     
-.navproject{
-    
-    font-size: 20px ;
+.header__navproject{
     line-height: 1.3;
     padding: 10px 0 0;
-    height: 100%;
-    
-    
+    height: 100%;     
 }
-.navservices , .navindustries{
+
+.header__navproject--navservices , .header__navproject--navindustries{
     display: flex;
     justify-content:space-between;  
     align-items: center;
@@ -65,111 +58,75 @@ header{
 }
 
 
-  
-/* =====>>>>MAIN */
-
- 
-
-  main{
+.main{
     display: flex;
-    flex-flow: column wrap;
-    justify-content: flex-start;
+    flex-direction: column;
+    justify-content: space-between;
 
 }
 
-
-.image-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex-direction: row;
-    width:100%;
-
-  }
-.image-container img{
-    align-content: stretch;
+.main__imagecontainer img{
     width: 100%;
     height: 100%;
     padding-top: 3px;
 
 }
 
-img:hover{
+.main__imagecontainer img:hover{
     opacity: 0.05;
     transition: opacity 500ms;
 }
 
 
- #presentation{
-     display: none;
- }
-
- 
-  
-  .mainarticles{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-
-  
-}
-
-.we-are-mucho, .talking-and-teaching, .about{
+.main__mainarticles--wearemucho, .main__mainarticles--talkingandteaching, .main__mainarticles--about{
     margin-bottom: 1%;
     background-color: #F4F4F4;
     padding: 24px;
 
 }
 
-.mainarticles p{
-    font-size: 20px;
-}
-
-
-
- h2{
+.main__mainarticles h2{
     color: #EC1C24;
     font-size: 14px;
 }
 
-.we-are-mucho a{
+.main__mainarticles a {
     color: #AEAEAE;
     text-decoration: none;
 }
 
-.contact{
-   
-    padding-top:100px;
-    color:#555555;
-    font-size: 20px;
-}
- 
-/* =====>>>>FOOTER */
-footer{
-    display: grid;
-    grid-template-columns: 87% 13%;
-    color: #AEAEAE;
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     font-size: 14px;
-
-   
-    margin-top: 10%;
-    color:#8a8888;
+    margin-top: 10%; 
     margin: 3% 3%;
 
 }
 
+.footer__contact{
+    
+    font-size: 20px;
+}
+ 
 
-
-.footer-adresses{
+.footer__adresses{
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
 
 }
-.cities div{
-    padding: 100px;
+
+.footer h2{
+    color: #EC1C24;
+    font-size: 14px;
 }
-  
+
+.footer__copyrightsuscribe{
+    color:#AEAEAE;
+
+}
+
 
 
 
