--- a/staff/sylvain-legrill/mucho-layout/tablet/style.css
+++ b/staff/sylvain-legrill/mucho-layout/tablet/style.css
@@ -1,11 +1,8 @@
 
-/* =====>>>>GENERAL */
-
 html{
     box-sizing: border-box;
 
 }
-
 
 body{
     
@@ -19,50 +16,51 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
     line-height: 1.5;
+    font-size: 20px;
     width: 100%;
 }
 
-
-
-
-/* =====>>>>HEADER */
-
-header{
+.header{
    
     background-color: rgb(255,255,255); 
-    padding: 14px 16px;  
+    padding: 14px 16px; 
+    font-size: 14px; 
     color: #AEAEAE;
-    font-size: 20px;
     
 }
 
-#logo-img{
-    width: 85px;
-}
-
-#bars{
-    display: none;
-}
-
-.nav{
+.header__nav{
     display: flex;
     justify-content:space-between;  
     align-items: center;
- }
+}
 
-.menulist{
+.header__logoimg {
+    width: 85px;
+}
+
+.header__presentation{
+    display: none;
+}
+
+.header__bars{
+    display: none;
+}
+
+
+.header__navigator--menulist{
     
     display: flex;
 }
 
-.menulist li {
+.header__navigator--menulist li {
 
 font-size: 14px;
 padding: 2%;
 list-style-type: none;  }
 
     
-.navproject{
+.header__navproject{
 
     display: flex;
     justify-content: flex-end;
@@ -70,7 +68,7 @@ list-style-type: none;  }
     
     
 }
-.navservices , .navindustries{
+.header__navproject--navservices , .header__navproject--navindustries{
     display: flex;
     align-items: center;
     margin: 2%;
@@ -78,47 +76,38 @@ list-style-type: none;  }
 
 }
 
-.navproject i{
+.header__navproject i{
     margin-left: 10px;
 
 }
 
-/* =====>>>>MAIN */
-
-main{
-   margin-left: 1%;
-   margin-right: 1%;
-    
+.main{
+    margin-left: 1%;
+    margin-right: 1%;
+        
 }
 
-.image-container {
+.main__imagecontainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     flex-direction: row;
     width:100%;
   }
-.image-container img{
+.main__imagecontainer img{
     align-content: stretch;
     width: 49.8%;
     height: 49.8%;
 
 }
 
-img:hover{
+.main__imagecontainer img:hover{
     opacity: 0.05;
     transition: opacity 500ms;
 }
-
-
-
- #presentation{
-     display: none;
- }
-
  
   
-  .mainarticles{
+.main__mainarticles{
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
@@ -127,9 +116,7 @@ img:hover{
   
 }
 
-
-
-.we-are-mucho, .talking-and-teaching, .about{
+.main__mainarticles--wearemucho, .main__mainarticles--talkingandteaching, .main__mainarticles--about{
     
     background-color: #F4F4F4;
     padding: 10px;
@@ -138,44 +125,40 @@ img:hover{
 
 
 
-.mainarticles p{
-    font-size: 20px;
-    padding: 10px;
-}
-
-
-
- h2{
+.main__mainarticles h2{
     color: #EC1C24;
     font-size: 14px;
     padding: 10px;
 }
 
-.we-are-mucho a{
+.main__mainarticles a{
     color: #AEAEAE;
     text-decoration: none;
 }
 
-.contact{
-   
-    padding-top:100px;
-    color:#555555;
-    font-size: 20px;
-}
- 
-/* =====>>>>FOOTER */
 
-footer{
+ 
+
+.footer{
    
     color: #AEAEAE;
-   
     margin-top: 10%;
     color:#8a8888;
     margin: 3% 3%
 
 }
 
-.footer-addresses{
+.footer__contact{
+
+    justify-items: start;
+    grid-column-start: 1 / span 2;
+    font-size: 26px;
+    padding-top:100px;
+    color:#555555;
+}
+
+
+.footer__addresses{
     display: grid;
     grid-template-columns: 48% 48%;
     grid-template-rows: 48% 48%;
@@ -184,22 +167,41 @@ footer{
 }
 
 
+.footer__copyrightsuscribe{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: flex-end;
+    color:#AEAEAE;
+    font-size: 14px;
 
- #footer-text {
-    justify-items: start;
-    grid-column-start: 1 / span 2;
-    font-size: 26px
 
 }
 
-
-
-.cities div{
-    padding: 0 0 40px
+.footer__copyrightsuscribe--subscribe, .footer__copyrightsuscribe--copyright{
+    
+    align-content: space-between;
 }
-  
 
+.footer__copyrightsuscribe--subscribe{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    word-spacing: 2px;
 
+}
+
+.footer__copyrightsuscribe--subscribe i {
+    margin: 10px;
+    font-size: 17px;
+}
+
+.footer h2{
+    color: #EC1C24;
+    font-size: 14px;
+
+}
 
 
 
