--- a/staff/oihane-unciti/mucho-layout/all-sass/style.sass
+++ b/staff/oihane-unciti/mucho-layout/all-sass/style.sass
@@ -2,13 +2,31 @@ $bkc: lightgray
 
 body 
     padding-top: 10%
+    width: 99vw
+    margin: 0 auto
+    border: 2px solid
 
-*
-    margin-left: 0
+.header
+    display: flex
+    border-bottom: 1px solid gray
+    padding-bottom: 2vh
+    top: 0
+    left: 0
+    background-color: white
+    width: 100%
+    // position: fixed
+    z-index: 1
+    width: 100%
+
+   
+    &__presentation
+        display: none
+        width: 40%
 
 .menu
     list-style: none
     display: flex
+    width: 40%
 
     &__li
       margin-left: 2%  
@@ -21,23 +39,11 @@ body
         list-style: block
         padding: 2%
  
-.header
-    display: flex
-    border-bottom: 1px solid gray
-    padding-bottom: 2vh
-    top: 0
-    left: 0
-    background-color: white
-    width: 100%
-    position: fixed
-   
-    &__presentation
-        display: none
-        width: 40%
+
 
 .logo
     padding: 2%
-    width: 20%
+    width: 15%
 
 .nav
     height: 10%
@@ -45,20 +51,42 @@ body
         border-bottom: 1px solid $bkc
         margin-left: 1%
 
+.mosaic
+    width: 95%
+    margin: 0 auto
+    display: flex
+    flex-direction: column
+
+.img
+    width: 100%
+    height: auto
+
 .article__information
     background-color: $bkc
     border: 1px solid white
     width: 100%
 
-.square
-    padding: 2%
+
 
 .footer
     padding-left: 2%
+    width: 100%
+
+    &__information
+        background-color: green
+        width: 100%
+
+.social_networks
+    width: 100%
+    display: flex
+    flex-direction: column
+
+.social_networks__bloc
+    display: flex
+    flex-direction: column
 
 
-
-@media (min-width: 768px) and (max-width: 1024px)
+@media (min-width: 768px) 
     .header
         justify-content: space-between 
  
@@ -84,7 +112,7 @@ body
      
    
     .article__information
-        width: 49.7%
+        width: 40%
        
         
     .main__img
@@ -92,7 +120,7 @@ body
         flex-wrap: wrap
 
     .img
-        width: 50% 
+        width: 45% 
         padding: 0
         
     .menu
@@ -114,6 +142,21 @@ body
             width: 50%
             margin: 0 
             justify-content: space-around
+    
+    .social_networks
+        flex-direction: row-reverse
+        justify-content: space-between
+        
+    
+    .social_networks__bloc
+        flex-direction: row
+        justify-content: flex-end
+        align-items: center
+        width: 40%
+    
+    .social_networks__copy
+        width: 40%
+
 
   
 
@@ -204,18 +247,11 @@ body
         &__address
             width: 25%
             margin: 0 
-    
-    .social_networks
-        display: flex
-        flex-direction: row-reverse
-        justify-content: space-between
 
         &__copy
             margin-rigth: 200px
 
-    .social_networks__bloc
-        display: flex
-        padding-left: 500px
+
     
     .menu__red
         padding: 5px
