--- a/staff/jaume-villarreal/initial-app/css/content-box.sass
+++ b/staff/jaume-villarreal/initial-app/css/content-box.sass
@@ -1,9 +1,15 @@
 .panel
-    border: 1px solid
+    border: 1px solid #c9c9c9
     width: 75%
-    margin: 10vh auto
-    padding: 3rem
+    height: auto
+    margin: 0 auto
+    padding: 1rem 3rem
+    border-radius: 1rem
+    background-color: #f9f9f9
     &--show
-        display: block
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: center
     &--hide
         display: none
