--- a/staff/jaume-villarreal/initial-app/css/style.css
+++ b/staff/jaume-villarreal/initial-app/css/style.css
@@ -1,3 +1,26 @@
+body {
+  width: 75vw;
+  margin: 1rem auto;
+}
+
+.wrapper {
+  box-sizing: border-box;
+  font-family: Helvetica, Arial, sans-serif;
+  width: 100%;
+}
+
+.header-1 {
+  font-size: 3rem;
+  width: 75%;
+  margin: 0 auto 2rem;
+  text-align: center;
+  color: #666;
+}
+
+.header-2 {
+  color: #666;
+}
+
 .wrapper {
   width: 75vw;
   margin: 10vh auto;
@@ -5,16 +28,60 @@
 }
 
 .panel {
-  border: 1px solid;
+  border: 1px solid #c9c9c9;
   width: 75%;
-  margin: 10vh auto;
-  padding: 3rem;
+  height: auto;
+  margin: 0 auto;
+  padding: 1rem 3rem;
+  border-radius: 1rem;
+  background-color: #f9f9f9;
 }
 .panel--show {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .panel--hide {
   display: none;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10rem;
+  margin: 1rem;
+  padding: 1rem;
+  font-size: 1rem;
+  background-color: #c9c9c9;
+  border-radius: 0.5rem;
+  border: 2px solid #c0c0c0;
+  text-decoration: none;
+  color: #333;
+  transition: 0.5;
+}
+.btn:hover {
+  background-color: green;
+  border: 2px solid green;
+  color: white;
+}
+
+.form__input {
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.form__input label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.form__input input {
+  display: block;
+  width: 100%;
+  height: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
