--- a/staff/christian-haag/initial-app/style.css
+++ b/staff/christian-haag/initial-app/style.css
@@ -1,16 +1,86 @@
-body{
-    display: block;
-    margin: 8px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #47cf73;
+}
+
+body {
+  display: flex;
+}
+
+main {
+  height: 50%;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
 }
 
 section {
-    border: 1px solid black;
-   }
-   
-.panel--hide{
-    display: none;
+  display: flex;
+  align-content: center;
+}
+a {
+  margin: 2px 10px;
 }
 
-.panel--show{
-    display: block;
+h1 {
+  color: #47cf73;
 }
+
+form {
+  margin: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: space-around;
+}
+
+button {
+  text-align: center;
+  margin: 5px 0;
+}
+
+img {
+  width: 50%;
+  object-fit: contain;
+}
+
+.panel {
+  margin-top: 35px;
+  width: 350px;
+  height: auto;
+  min-height: 25vh;
+  background-color: #f5f5f5;
+  border-radius: 7px;
+}
+
+.text {
+  background-color: #ffffff;
+  margin: 30px 15px;
+  padding: 10px 5px;
+  border-radius: 7px;
+}
+
+.link {
+  margin: 50px 15px;
+}
+
+.panel--hide {
+  display: none;
+}
+
+.panel--show {
+  display: block;
+}
+
+/*# sourceMappingURL=style.css.map */
