--- a/staff/jaume-villarreal/initial-app/css/panel.sass
+++ b/staff/jaume-villarreal/initial-app/css/panel.sass
@@ -6,6 +6,7 @@
     padding: 1rem 3rem
     border-radius: 1rem
     background-color: #f9f9f9
+    position: relative
     &--show
         display: flex
         flex-direction: column
