--- a/staff/jaume-villarreal/initial-app/css/form.sass
+++ b/staff/jaume-villarreal/initial-app/css/form.sass
@@ -3,12 +3,18 @@
     display: flex
     flex-direction: column
     justify-content: center
-    label
+    align-items: center
+    >label
         display: block
         margin-bottom: .5rem
 
-    input
+    >input
         display: block
-        width: 100%
+        width: 90%
         height: 2rem
+        padding: .25rem
+        text-align: center
         margin-bottom: 1.5rem
+        font-size: 1rem
+        
+        
