--- a/staff/jaume-villarreal/initial-app/css/style.css
+++ b/staff/jaume-villarreal/initial-app/css/style.css
@@ -35,6 +35,7 @@ body {
   padding: 1rem 3rem;
   border-radius: 1rem;
   background-color: #f9f9f9;
+  position: relative;
 }
 .panel--show {
   display: flex;
@@ -44,6 +45,14 @@ body {
 }
 .panel--hide {
   display: none;
+}
+
+.btn-set {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn {
@@ -61,10 +70,37 @@ body {
   color: #333;
   transition: 0.5;
 }
+.btn--form {
+  width: 100%;
+}
 .btn:hover {
   background-color: green;
   border: 2px solid green;
   color: white;
+}
+.btn--back {
+  position: absolute;
+  width: 2rem;
+  top: 0;
+  left: 0;
+  background-color: #999;
+  opacity: 0.75;
+  border: none;
+}
+.btn--back:hover {
+  background-color: orange;
+  border: none;
+  opacity: 1;
+  font-weight: bold;
+  color: white;
+}
+.btn--inline {
+  display: inline-block;
+  padding: 0.5rem;
+  border: 1px solid #999;
+  width: 5rem;
+  text-align: center;
+  margin: 0 0.25rem 0 0;
 }
 
 .form__input {
@@ -72,16 +108,20 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
-.form__input label {
+.form__input > label {
   display: block;
   margin-bottom: 0.5rem;
 }
-.form__input input {
+.form__input > input {
   display: block;
-  width: 100%;
+  width: 90%;
   height: 2rem;
+  padding: 0.25rem;
+  text-align: center;
   margin-bottom: 1.5rem;
+  font-size: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
